--- a/2010/thesis/elastic.tex
+++ b/2010/thesis/elastic.tex
@@ -154,7 +154,7 @@ The symbol $G_{\rm eff}(t)$ represents an ``effective'' form factor that is a co
 \eqref{G^2_{\rm eff}(t) = {G_{\rm E}(t)^2 + \ta G_{\rm M}(t)^2 \over 1 + \ta},\qquad \ta = - {t\over 4m^2}\ .}{el ff eff}
 For very low four-momentum transfers $|t| \ll m^2$, the contribution of the magnetic form factor is negligible and one can put $G_{\rm eff}(t) = G_{\rm E}(t)$. However, as $|t|$ raises to about $m^2$, the influence of proton's magnetic moment can not be neglected anymore.
 
-We will discuss the adequacy of the OPE approximation at the end of this section. For now, we will focus on the form factors of the proton. They can determined from the measurements of the elastic $\rm ep$ scattering. The electron serves as a point-like projectile that probes the spatial structure of the proton. From the QFT point of view, the form factors of the proton alter proton's interaction with photon, no matter whether the photon is emitted/absorbed by an electron or proton. That is why form factors determined from $\rm ep$ scattering can be used in $\rm pp$ scattering too.
+We will discuss the adequacy of the OPE approximation at the end of this section. For now, we will focus on the form factors of the proton. They can be determined from the measurements of the elastic $\rm ep$ scattering. The electron serves as a point-like projectile that probes the spatial structure of the proton. From the QFT point of view, the form factors of the proton alter proton's interaction with photon, no matter whether the photon is emitted/absorbed by an electron or proton. That is why form factors determined from $\rm ep$ scattering can be used in $\rm pp$ scattering too.
 
 There has been a number of such analyses done, gradually accounting for the increasing amount of experimental data. One of the first results was the work of Hofstadter \bref{hofstadter58}, who parameterized both form factors by a dipole formula
 \eqref{G_{\rm E}(t) = F_{\rm d}(t) (1 - \ta\ka),\quad G_{\rm M}(t) = F_{\rm d}(t) (1+\ka),\quad F_{\rm d}(t) = \left( \La^2\over \La^2 - t \right)^2\ ,\qquad \La^2 = 0.71\un{GeV^2}\ .}{el ff dipole}
@@ -196,7 +196,7 @@ The Coulomb eikonal can, in principle, be calculated by \Eq{el eik app born}. Ho
 
 \vskip\baselineskip
 
-So far, we have discussed the hadronic and electromagnetic interactions separately. Now we turn to the question what is the amplitude describing these forces acting simultaneously. This \em{Coulomb-hadronic} interference has been studied by a number of authors within a number of formalism. We will first review some of the most important results and eventually discuss the differences and provide numerical comparisons, especially with our new eikonal calculation to all orders of $\al$.
+So far, we have discussed the hadronic and electromagnetic interactions separately. Now we turn to the question what is the amplitude describing these forces acting simultaneously. This \em{Coulomb-hadronic} interference has been studied by a number of authors within a number of formalism. We will first review some of the most important results and eventually discuss the differences and provide numerical comparisons, especially with our eikonal calculation to all orders of $\al$.
 
 \caption{Interference in non-relativistic QM}
 
@@ -242,7 +242,7 @@ Note that in \bref{wy68} there is a number of inconsistencies between Eq.~(17) a
 \eqref{\Ph_{\rm WY}(t) = \mp \log {t\over t_{\rm min}} \pm \int\limits_{t_{\rm min}} {\d t'\over |t' - t|} \left( {\FH(t')\over \FH(t)} - 1 \right) + \O{\al}\ .}{el phase WY}
 The authors estimate the uncertainty of this formula to be of the order of $\al$.
 
-In the time when \WY{} published their work, it seemed perfectly plausible to describe the hadronic amplitude as $F^H(t) \propto \e^{Bt/2}$, where $B$ is the diffractive slope (constant). Then the interference phase would simplify (in the limit of low scattering-angles and high energies) to
+In the time when \WY{} published their work, it seemed perfectly plausible to describe the hadronic amplitude as $\FH(t) \propto \e^{Bt/2}$, where $B$ is the diffractive slope (constant). Then the interference phase would simplify (in the limit of low scattering-angles and high energies) to
 \eqref{\Ph_{\rm SWY}(t) = \mp \left(\log {B|t|\over 2} + \ga \right) + \O{\al} \ ,}{el phase SWY}
 where $\ga \doteq 0.577$ is the Euler's constant.
 
@@ -258,7 +258,7 @@ The total scattering amplitude can be obtained from \Eq{el eik rep}
 These steps can be found in the beginning of a number of works, aiming primarily at rederiving the formulae of Bethe \bref{bethe58} and \WY{} \bref{wy68}.
   For example Islam \bref{islam67} (first building his own eikonal formalism) rederived the formula of Bethe and found it more accurate than Bethe's original assumptions.
   Franco \bref{franco73} used the eikonal formalism to derive the formula of \WY{} (in $\O{\al}$ approximation). He also obtained an interference formula at all $\al$ orders, unfortunately only for a hadronic model with a constant phase and a constant diffractive slope.
-  Buttimore et al. \bref{buttimore78} extended (postulated) the eikonal formalism also for spin-dependent scattering. Again unfortunately, they limited themselves to a hadronic model with a constant slope.
+  Buttimore et al.~\bref{buttimore78} extended (postulated) the eikonal formalism also for spin-dependent scattering. Again unfortunately, they limited themselves to a hadronic model with a constant slope.
 
 Cahn \bref{cahn82} also started by rederiving the formula of \WY. By inserting \Eq{el de CH} to \Eq{el F CH eik} he obtained
 \eqref{\FCH(t) = \FC(t)
@@ -307,7 +307,7 @@ One of the most recent works on the field of the Coulomb-interference is from Ko
 
 In this part we will review the results summarized above and discuss their validity and the relations among them.
 
-The first quantity to review is the Coulomb amplitude. We have pursued two approaches to derive it -- the QED and the eikonal model. While we consider QED the best available tool to describe electromagnetic interactions, we have presented the leading order (OPE) to the scattering amplitude only, see \Eq{el dsdt em}. A natural question could be raised -- is the leading order good enough. An answer can be found in the already quoted works on form factors \bref{arrington07,puckett10}. The authors used two methods for extracting the form factors. One is based on comparing the measured differential cross-section $\d\si/\d t$ with the one expected for point like particles (Mott formula, calculated also in OPE order, see e.g. \bref{chyla}). In the other method a longitudinally polarized electron beam is used and the polarization of the recoil proton is measured (more details e.g. in \bref{gayou02}). Then, these two methods are found to disagree for $|t| \gs 1\un{GeV^2}$ (see e.g. Fig.~2 in \bref{arrington07}). The authors argue that most of the discrepancy disappears if two-photon-exchange (TPE) contributions are included. Moreover these corrections alter mostly the results of the cross-section method (which is very similar to our form-factor application). This leads us to the conclusion that the OPE cross-section presented in \Eq{el dsdt em} is only accurate for $|t|$ below $1\un{GeV^2}$.
+The first quantity to review is the Coulomb amplitude. We have pursued two approaches to derive it -- the QED and the eikonal model. While we consider QED the best available tool to describe electromagnetic interactions, we have presented the leading order (OPE) to the scattering amplitude only, see \Eq{el dsdt em}. A natural question could be raised -- is the leading order good enough? An answer can be found in the already quoted works on form factors \bref{arrington07,puckett10}. The authors used two methods for extracting the form factors. One is based on comparing the measured differential cross-section $\d\si/\d t$ with the one expected for point like particles (Mott formula, calculated also in OPE order, see e.g. \bref{chyla}). In the other method a longitudinally polarized electron beam is used and the polarization of the recoil proton is measured (more details e.g. in \bref{gayou02}). Then, these two methods are found to disagree for $|t| \gs 1\un{GeV^2}$ (see e.g. Fig.~2 in \bref{arrington07}). The authors argue that most of the discrepancy disappears if two-photon-exchange (TPE) contributions are included. Moreover these corrections alter mostly the results of the cross-section method (which is very similar to our form-factor application). This leads us to the conclusion that the OPE cross-section presented in \Eq{el dsdt em} is only accurate for $|t|$ below $1\un{GeV^2}$.
 
 We have also calculated the Coulomb amplitude in the eikonal formalism, see \Eq{el cahn 2}. This amplitude receives contributions of all orders of $\al$ and thus may seem to include the TPE corrections. It is only partially true. The amplitude has been generated via the eikonal relation \Eq{el eik rep} with the eikonal calculated from the OPE amplitude. According to Sec.~6.2 in \bref{barone}, this procedure is for large $s$ equivalent to summing diagrams of the type \Fg{el diagrams2} A. Hence only this type of diagrams is included in the eikonal calculation. We have seen that the eikonal complete amplitude differs from the Born ($\equiv$ OPE) one merely by phase (\Eq{el cahn 2}). This keeps the corresponding cross-section unchanged and thus it is insufficient to reconcile the two form-factor-extraction methods. These facts bring us to the conclusion that neither the eikonal full amplitude can be trusted above $|t|\approx 1\un{GeV^2}$.
 
@@ -319,7 +319,9 @@ The diagram E goes beyond the scope of the QED. It reflects the fact that a phot
 
 \WaY{} used a series of assumptions in deriving their interference phase \Eq{el phase WY}. One of the most limiting was that the phase of the hadronic amplitude is a slowly varying function only. They wrote: ``One can hope, therefore, that in the region where $\Ph(t)$ gets its major contribution, corrections due to the variation of the phase of $F^H(t)$ are not large. Nevertheless, this represents another source of our ignorance whose magnitude cannot be estimated without detailed knowledge of the strong interactions.'' Therefore it makes no sense applying \WaY{} formula to hadronic models with a rapidly varying phase which, unfortunately, is the case for most phenomenological models -- see \Fg{el mod phase}. In such cases, the interference ``phase'' (\rhs{} of \Eq{el phase WY}) turns out complex, however the phase has been derived as an imaginary part of a quantity (thus purely real) -- see \Eq{el wy 6}. The imaginary component of the phase $\Ph_{\rm WY}$ can be seen in \Fg{el cic noff Psi} (right). In similar words, the interference phase of \WaY{} can only be real if the phase of the hadronic amplitude is constant (this theorem has been proved by Kundr\' at et al. \bref{klv07}).
 
-The simplified \WaY{} formula, \Eq{el phase SWY}, brings yet another assumption -- constant slope $B$, which is undoubtedly ruled out by experimental data. No wonder that the prediction of the simplified formula deviates significantly from the non-simplified one for $|t| \gs 3\cdot 10^{-2}\un{GeV^2}$, see \Fg{el cic noff Psi,el cic diff Psi ff}. We may only wonder why it is still used, see for instance Eq.~2-7 in ATLAS ALFA TDR \bref{alfa}. May be even higher level of ignorance was shown in works \bref{ppp03,ppp05}. The authors fitted $\rm pp$ and $\rm\bar pp$ scattering data with their own hadronic model and several interference formulae. Even though their model has a non-constant slope (see red curves in \Fg{el mod B}) and non-constant phase (see \Fg{el mod phase}) they used the simplified \WY{} formula. They included Cahn's formula too, bug again a simplified version, which assumes a constant slope $B$.
+The simplified \WaY{} formula, \Eq{el phase SWY}, brings yet another assumption -- constant slope $B$, which is undoubtedly ruled out by experimental data. No surprise that the prediction of the simplified formula deviates significantly from the non-simplified one for $|t| \gs 3\cdot 10^{-2}\un{GeV^2}$, see \Fg{el cic noff Psi,el cic diff Psi ff}. We may only wonder why it is still used, see for instance Eq.~2-7 in ATLAS ALFA TDR \bref{alfa}.
+%May be even higher level of ignorance was shown
+Or in works \bref{ppp03,ppp05}. The authors fitted $\rm pp$ and $\rm\bar pp$ scattering data with their own hadronic model and several interference formulae. Even though their model has a non-constant slope (see red curves in \Fg{el mod B}) and non-constant phase (see \Fg{el mod phase}) they used the simplified \WY{} formula. They included Cahn's formula too, but again a simplified version, which assumes a constant slope $B$.
 
 Let's discuss Cahn's interference formula \Eq{el phase Cahn} now. Using his words, he ``abused'' a relation (used it beyond its domain of validity) in deriving the complete Coulomb amplitude \Eq{el cahn 2}. His interference phase is clearly neglecting terms of order $\O{\al}$. Therefore one may naively expect a precision of $\al\approx 1\percent$. However a question is whether some enhancements may appear. In addition, he performed a series of rather benevolent manipulations with terms like $\al \log t/ t'$, where $t'$ is an integration variable ranging from $t_{\rm min}$. Taking some values of interest: $|t| = 1\un{GeV^2}$ and $|t_{\rm min}| \approx s = (7\un{TeV})^2$ yields a correction of $-13\percent$, which is rather important.
 
