--- a/2010/thesis/totem.tex
+++ b/2010/thesis/totem.tex
@@ -39,6 +39,10 @@ strip	& 0 to 127		\cr
 
 \>> give idea about the dimensions (for reference reasons later), + spacing between sensors (total stack size), detector pitch, detector orientation
 
+\> define u, v (the system rotating with sensor) and U, V (45 deg. rotation of about s of the xys system), strips along u, read-out direction is v
+\TODO{make sure this is used everywhere}
+
+
 \>> mention BPMs and BLMs
 
 
@@ -70,22 +74,22 @@ strip	& 0 to 127		\cr
 
 \section[rp measurement]{Proton Measurement with Roman Pot detectors}
 
-\fig{fig/pdf/ttm_proton_transport.pdf}{ttm proton transport}{A scheme of the proton transport from the interaction point to a RP station. $x_{\rm N}$ and $x_{\rm F}$ are the hit points in the near and far units of the station.}
+\fig{fig/pdf/ttm_proton_transport.pdf}{ttm proton transport}{A scheme of the proton transport from the interaction point to a RP station. $y_{\rm N}$ and $y_{\rm F}$ are the hit points in the near and far units of the station.}
 
 
-Imagine a collision which takes place at the \em{vertex}:
-\eqref{(x^*, y^*, z^*)^\T}{ttm ip vertex}
+Imagine a collision which takes place at a \em{vertex}
+\eqref{(x^*, y^*, s^*)^\T}{ttm ip vertex}
 and where a proton is created, as sketched in \Fg{ttm proton transport}. One may relate the momentum $p$ of the outgoing proton to the nominal beam momentum
 \eqref{p^* = p_{\rm nom} (1 - \xi^*)\ ,}{ttm xi}
-where $\xi^*$ is the the \em{momentum loss}. The direction of the proton is described by the \em{scattering angle} $\th^*$ and the \em{azimuthal angle} $\ph^*$:
+where $\xi^*$ is the \em{momentum loss}. The direction of the proton is described by the \em{scattering angle} $\th^*$ and the \em{azimuthal angle} $\ph^*$:
 \eqref{\vec p^* = p^* \pmatrix{\sin\th^* \cos\ph^*\cr \sin\th^*\sin\ph^* \cr \cos\th^*}
 %=  p \pmatrix{\th_x\cr \th_y\cr \sqrt{1 - \th_x^2 - \th_y^2}}
 \ .}{ttm mom comp}
 The coordinate system $(x, y, s)$ is illustrated in \Fg{ttm proton transport}, the $s$ axis represents the beam axis.
 
-The protons of our interest are scattered to low angles and therefore they stay close the outgoing beam and together they enter a portion of the LHC magnet lattice. When the outgoing proton reaches the region of a RP station, it has momentum $p$, direction described by angles $\th$ and $\ph$ and may hit the detectors at points $x_{\rm N}$ and $x_{\rm F}$ just as shown in \Fg{ttm proton transport}.
+The protons of our interest are scattered to low angles and therefore they stay close the outgoing beam and they enter the LHC magnet lattice. When the outgoing proton reaches the region of a RP station, it has momentum $p$, direction described by angles $\th$ and $\ph$ and may hit the detectors at points $x_{\rm N}$ and $x_{\rm F}$ just as shown in \Fg{ttm proton transport}.
 
-Further on, we will keep the notation that variables related to the IP will include a star superscript, those without will be related to RP stations. Energy of the protons shall be conserved during the LHC transport from the IP to RP stations, therefore $p = p^*$ and $\xi = \si^*$ and thus we will not make disctiction between their IP and RP values.
+We will use the notation that quantities related to the IP will be denoted with a star superscript, those without will be related to RP stations. Energy of the protons shall be conserved during the LHC transport from the IP to RP stations, therefore $p = p^*$ and $\xi = \si^*$. Thus we will not make distinction between their IP and RP values.
 
 It will be useful to define the \em{projections of the scattering angle} (both for IP and RP-station quantities)
 \eqref{\th_x = \th \cos\ph\ ,\qquad \th_y = \th \sin\ph\ .}{ttm th x y}
@@ -94,87 +98,11 @@ Similarly, one can define the projections of the momentum transfer $t$:
 This definition follows, in fact, from the low-scattering-angle approximation in \Eq{el t}, which we will commonly use in what follows (the scattering angles of interest are at most of the order $10^{-3}\un{rad}$, see e.g. \Fg{el mod dsdt large}). The definitions \Eq{ttm th x y,ttm t x y} yield relations
 \eqref{t = t_x + t_y = - p^2 \th^{*2} = - p^2 (\th_x^{*2} + \th_y^{*2})\ .}{ttm t th}
 
-We will now describe the relation between the measurements by the silicon sensors and the kinematics of the outgoing proton. The end of this section will be devoted to the proton transport in the LHC.
-
-\caption{The relation between proton kinematics and silicon sensor measurements}
-
-\> define u, v and U, V (one system rotating with sensor, one as a rotation wrt. x y system), strips along U, read-out direction is V
-
-Then, the proton is transported by the lattice of the LHC magnets to the detector area (say to $z = z_0$). The transport is schematically depicted in \Fg{ttm proton transport}. As there are no magnets in the detector area, from $z_0$ on, the proton follows a straight trajectory which might be described as
-\eqref{\pmatrix{x\cr y\cr z} = \pmatrix{a_x\cr a_y\cr 1} z + \pmatrix{b_x\cr b_y\cr 0}}{local track}
-
-So far, the coordinates have been described in the global $xyz$ coordinate system. For deriving (the expected measurement value), it is useful to use a local coordinate frame $x_l y_l z_l$. This coordinate system has its origin in the center of the detector. Its $x_l$ and $y_l$ axes parallel to the detector surface and its $z_l$ axis perpendicular to the surface. The global to local transformation can be written
-\eqref{\pmatrix{x_l\cr y_l\cr z_l} = \mat R \left[ \pmatrix{x\cr y\cr z}  - \pmatrix{c_x\cr c_y\cr c_z}  \right] \ ,}{global to local}
-where the $\vec c$ vector stands for the detector's center position in the global coordinates.
-
-The measurement $m$ is then given by projection of the local surface coordinates $x_l$ and $y_l$ to the readout direction $\vec d$
-\eqref{m = \hbox{ROUND}\left( (d_x, d_y) \pmatrix{x_l\cr y_l} \right)}{full measurement}
-The vector $\vec d = (d_x, d_y)^\T$ is the readout direction (perpendicular to strips). The ``ROUND'' comprises charge sharing effects etc.
-
-The rotation $\mat R$ can be parameterized as
-\eqref{\mat R =
-\pmatrix{
-\cos\rh_z  & \sin\rh_z & 0\cr
--\sin\rh_z & \cos\rh_z & 0\cr
-0		   & 0         & 1\cr
-}
-\pmatrix{
-\cos\rh_y  & 0 & \sin\rh_y\cr
-0		   & 1 &          \cr
--\sin\rh_y & 0 & \cos\rh_y\cr
-}
-\pmatrix{
-1 & 0		   & 0        \cr
-0 & \cos\rh_x  & \sin\rh_x\cr
-0 & -\sin\rh_x & \cos\rh_x\cr
-}
-}{rotation parameterization}
-
-\TODO{} The rotation $\mat R$ only describes the misalignment rotations. As follows from the \Sc{al exp misal}, the estimate for such rotations is of the order of $1\un{mrad}$. For such angles, it is possible to use the following approximation
-\eqref{\cos\rh \approx 1,\qquad \sin\rh \approx \rh\ .}{small rotation approximation}
-Furthermore, terms as $\sin\rh_x \sin\rh_y$ can be neglected to $\sin\rh_x$. Therefore, the rotation $\mat R$ can be approximated by
-\eqref{\mat R \approx \pmatrix{
-1 & \rh_z & \rh_y\cr
--\rh_z & 1 & \rh_x\cr
--\rh_y & -\rh_x & 1\cr
-}}{rotation parameterization approximated}
-
-\TODO{keep $\rh_z$ without the limit}
-
-Now, let us find the point where the track \Eq{local track} hits the detector. This is the point on the track with $z_l = 0$. Inserting \Eq{local track} to \Eq{global to local}, one can find that the condition is fulfilled for 
-\eqref{z = z_i \equiv { c_z + \rh_y (b_x - c_x) + \rh_x (b_y - c_y) \over 1 - \rh_y a_x - \rh_x a_y} \ .}{z i}
-Now, lets make order estimate for the terms in the expression for $z_i$.\hfil\break
-\eqref{\eqnarray{
-c_z &\sim& 1\un{m} \cr
-\rh_{x,y} &\sim& 10^{-3}\un{rad} \cr
-(b - c)_{x, y} &\sim& 10^{-2}\un{m} \cr
-a_{x, y} &\sim& 10^{-2}\un{rad} \cr
-}}{z i order estimates}
-
-With these estimates, one can conclude
-\eqref{z_i = c_z + \O{10^{-5}\un{m}}\ .}{z i approximated}
-
-With the help of \Eq{global to local}, one can calculate the ``on-surface'' coordinates $x_l$ and $y_l$, for example
-\eqref{x_l = 
-\underbrace{a_x z_i}_{10^{-2}\un{m}}
-+ \underbrace{b_x - c_x}_{10^{-2}\un{m}} 
-+ \underbrace{\rh_z}_{10^{-3}} (\underbrace{a_y z_i}_{10^{-2}\un{m}} + \underbrace{b_y - c_y}_{10^{-2}\un{m}})
-+ \underbrace{\rh_y}_{10^{-3}} \underbrace{(z_i - c_z)}_{10^{-5}\un{m}}
-\ .}{xlyl i}
-Keeping only the important terms
-\eqref{\pmatrix{x_l\cr y_l} = \pmatrix{1 & \rh_z\cr -\rh_z & 1}
-\left[
-\pmatrix{a_x\cr a_y} c_z + \vec b - \vec c
-\right] + \O{10^{-8}\un{m}}\ .
-}{xlyl i approximated}
-
-
-
-\caption{Proton transport in th LHC}
+Since the magnetic field within the RP stations is negligible, protons follow a straight trajectory there. The relation between RP sensor measurements and the parameters of the trajectory is, therefore simple (for details see \Sc{al tb}). What is much more interesting is the proton transport from the IP to the RP stations. We will discuss it in the rest of this section.
 
 \> analytical description
 \>> the solution to Hill's equation, define beta function, emittance, phase advance (+ref)
-\>> alternative: the matrix equations (ref to Hubert, +); define optics, optical functions: effective length, maganification, dispersion
+\>> alternative: the matrix equations (ref to Hubert, +); define optics, optical functions: effective length, magnification, dispersion
 
 \> numerical tools; MAD-X
 
@@ -208,7 +136,7 @@ y(s) &=&\ L_y(s, \ldots)\, \th_y^* + v_y(s,\ldots)\, y^* + D_y(s,\ldots)\cr
 \> the tree optics classes - high beta, medium beta, low beta
 \>> classify by the optical functions (it controls what the optics is good for): Lx, Ly, D
 \>> associated quantities - emittance + resulting beam divergence, vertex smearing
-\>> nominal detector distance = 10 si bd, this sets t min
+\>> nominal detector distance = 10 si bd, this sets minimal t: $t_{30}$ ($2\cdot10^{-3}$ for 1535, $4\cdot10^{-2}$ for 90 and $2.5$ for 2)
 \>> goal of the optics (this sets the requirements for the luminosity)
 \>> luminosity
 
@@ -241,9 +169,17 @@ y(s) &=&\ L_y(s, \ldots)\, \th_y^* + v_y(s,\ldots)\, y^* + D_y(s,\ldots)\cr
 \fi
 
 \bmfig
-\fig{fig/pdf/elastic_acceptance.pdf}{elastic acceptance}{bla}
+\fig{fig/pdf/elastic_acceptance.pdf}{elastic acceptance}{$\sqrt{s} = 14\un{TeV}$, the dashed horizontal line gives the $t_{30}$}
 \fig{fig/pdf/hit_distribution.pdf}{hit distribution}{Distribution of elastic hits for the three types of optics.}
 \emfig
+
+
+
+
+
+
+
+\iffalse
 
 \section{The total cross-section}
 
@@ -252,25 +188,44 @@ y(s) &=&\ L_y(s, \ldots)\, \th_y^* + v_y(s,\ldots)\, y^* + D_y(s,\ldots)\cr
 \> Luminosity independent method
 \>> discuss the two amplitudes (spin averaged and spin preserving)
 \>> 4 inputs: el cs at 0, rho at 0, N el and N inel
-\>> N inel by T1 and T2
-\>> el cs at 0 and N el by RP with an extrapolation
-\>> rho at 0 (ref to \Eq{el rh}): Coulomb-interference or an external input
+\>> N inel by T1 and T2, not discussed here, refere
+\> rho at 0 (ref to \Eq{el rh}): Coulomb-interference or an external input
 
-\> extrapolation from measurable region to 0
-\>> two optics: 1535 and 90
+\eqref{
+	\si_{\rm tot} = {1\over 1+\rh^2} {\d N/\d t|_{t=0}\over N_{\rm el} + N_{\rm inel}}
+	\ ,\qquad
+	{\cal L} = (1+\rh^2) {(N_{\rm el} + N_{\rm inel})^2\over \d N/\d t|_{t=0} }
+}{ttm li meth}
+
+The differential rate at $t=0\un{GeV^2}$ can not be measured directly, it needs to be extrapolated from measured low $|t|$ data. As shown in \Fg{elastic acceptance}, there are two optics that extend to sufficiently low $|t|$ values: $\be^* = 1535$ and $90\un{m}$. This extrapolation procedure is important also for the (integral) elastic rate $N_{\rm el}$ measurement as it allows to correct for the events missed due to the finite acceptance.
+
+
 \>> B looks ``parabolic'' -- polynomial fit to B from data
+
+\iffalse
+islam_bfkl, 9E-01, 3E-01, 2E-02, 1E-03, 3E-04
+ islam_cgc, 9E-01, 3E-01, 2E-02, 1E-03, 3E-04
+      ppp2, 6E-02, 4E-03, 1E-04, 3E-06, 1E-06
+      ppp3, 8E-01, 2E-01, 4E-03, 4E-03, 2E-03
+       bsw, 5E-01, 2E-01, 1E-03, 2E-04, 2E-04
+        bh, 2E+00, 3E-01, 7E-03, 3E-03, 2E-03
+      mean, 8E-01, 2E-01, 8E-03, 1E-03, 8E-04
+\fi
+
+\fig{fig/pdf/ext_B.pdf}{ext B}{[7cm]bla}
 
 \> what one measures is $h(t')$ -- includes smearing and acceptance and both interactions (hadronic + em)
 \>> one needs to correct measured to hadronic (+unsmeared, acc. corr.)
 \>> for 1535 smearing is not a problem (need a justification), but Coulomb can go large (below few$\cdot 10^{-3}\un{GeV^2}$)
 \>> for 90 (in the range of its acceptance) Coulomb effect is small, but smearing is an issue - mostly because t x resolution
 
+\bmfig
+\fig{fig/pdf/ext_C.pdf}{ext C}{[7cm]bla}
+\fig{fig/pdf/ext_smearing.pdf}{ext smearing}{[7cm](smeared - orig) / orig, smearing sigma as from \Sc{elr}}
+\emfig
+
 \> corrections by iterations: data = U0 (U is uncorrected, C is corrected), guess C0 (e.g. by taking C0 = U0), then iterate:
 Ci --> Ui --> corr(i) = Ci/Ui --> C(i+1) = U0 * corr(i) and again unless |C(i+1) - C(i)| < threshold
-
-\> two options for 90 m
-\>> heavy unsmearing
-\>> or use t y dist only (preferred)
 
 \> a very old extrapolation study, unpublished, before OfflineSW existed
 \>> no G4 simulation, however simulation of beam smearing as in \Sc{beam smearing} and simulation of detector resolution similar to the one in \bref{fast simu}
@@ -285,6 +240,12 @@ Ci --> Ui --> corr(i) = Ci/Ui --> C(i+1) = U0 * corr(i) and again unless |C(i+1)
 
 \> 1535: cubic fit for modulus, constant in phase, one coulomb iteration, upper bound 0.054
 \>> discuss the phase: the one percent result might be too good
+
+\fig{fig/pdf/ext_results.pdf}{ext results}{delta on the level of cross-section at t=0: (extrapolated - orig) / orig}
+
+\> two options for 90 m
+\>> heavy unsmearing
+\>> or use t y dist only (preferred)
 
 \> 90m: the t y fit procedure
 \>> no unsmearing done -- the -2 percent shift
@@ -302,19 +263,4 @@ N_{\rm inel}	& \vbox{\hsize7cm\noindent\strut Total inelastic rate (error domina
 &\hbox{Total for } {\cal L} & 7\percent & 2\percent \cr\bln
 }
 
-\iffalse
-islam_bfkl, 9E-01, 3E-01, 2E-02, 1E-03, 3E-04
- islam_cgc, 9E-01, 3E-01, 2E-02, 1E-03, 3E-04
-      ppp2, 6E-02, 4E-03, 1E-04, 3E-06, 1E-06
-      ppp3, 8E-01, 2E-01, 4E-03, 4E-03, 2E-03
-       bsw, 5E-01, 2E-01, 1E-03, 2E-04, 2E-04
-        bh, 2E+00, 3E-01, 7E-03, 3E-03, 2E-03
-      mean, 8E-01, 2E-01, 8E-03, 1E-03, 8E-04
 \fi
-
-\bmfig
-\fig{fig/pdf/ext_B.pdf}{ext B}{[7cm]bla}
-\fig{fig/pdf/ext_C.pdf}{ext C}{[7cm]bla}
-\emfig
-
-\fig{fig/pdf/ext_results.pdf}{ext results}{bla}
