al sim fit section rewritten
git-svn-id: svn+ssh://svn.cern.ch/reps/totem/trunk/user/jkaspar/publications@4570 4525493e-7705-40b1-a816-d608a930855b

--- a/2010/thesis/totem.tex
+++ b/2010/thesis/totem.tex
@@ -98,7 +98,7 @@ Similarly, one can define the projections of the momentum transfer $t$:
 This definition follows, in fact, from the low-scattering-angle approximation in \Eq{el t}, which we will commonly use in what follows (the scattering angles of interest are at most of the order $10^{-3}\un{rad}$, see e.g. \Fg{el mod dsdt large}). The definitions \Eq{ttm th x y,ttm t x y} yield relations
 \eqref{t = t_x + t_y = - p^2 \th^{*2} = - p^2 (\th_x^{*2} + \th_y^{*2})\ .}{ttm t th}
 
-Since the magnetic field within the RP stations is negligible, protons follow a straight trajectory there. The relation between RP sensor measurements and the parameters of the trajectory is, therefore simple (for details see \Sc{al tb}). What is much more interesting is the proton transport from the IP to the RP stations. We will discuss it in the rest of this section.
+Since the magnetic field within the RP stations is negligible, protons follow a straight trajectory there. The relation between RP sensor measurements and the parameters of the trajectory is, therefore simple (for details see \Sc{al psi}). What is much more interesting is the proton transport from the IP to the RP stations. We will discuss it in the rest of this section.
 
 \> analytical description
 \>> the solution to Hill's equation, define beta function, emittance, phase advance (+ref)
