--- a/2010/thesis/alignment.tex
+++ b/2010/thesis/alignment.tex
@@ -82,6 +82,10 @@ In this way, we've determined the vertical positions of the thin windows (the RP
 
 \section[al tb]{Track--based alignment}
 
+Intro, partially the same as above: tracks should be straight lines, misalignments move the hits slightly off the track. They can be determined by an appropriate analysis of the residuals.
+
+\subsection[al psi]{The relation between proton kinimatics and RP measurements}
+
 Since the magnetic field within RP stations is negligible, protons follow a straight trajectory, as drawn in the side view of \Fg{al proton sensor interaction} (the same is shown in \Fg{ttm proton transport}, but with the third axis called $s$). The track can be described
 \eqref{\pmatrix{x\cr y\cr z} = \pmatrix{a_x\cr a_y\cr 1} z + \pmatrix{b_x\cr b_y\cr 0}\ ,}{al local track}
 where $a$ and $b$ parameters give the track slopes and intercepts.
@@ -141,194 +145,188 @@ In \Eq{al hit v} we have defined the \em{unit} vector $\vec d$ which represents 
 The only rotation misalignment that has survived in \Eq{al hit v} is the one about the $z$ axis. Also, this is the only rotation which has non-zero nominal value. To simplify the notation, we will drop the $z$ subscripts in what follows:
 $$\rh_z \longrightarrow \rh\ ,\qquad \De\rh_z \longrightarrow \De\rh\ .$$
 
-So far we have considered one sensor and one event. But \Eq{al measurement,al hit v} can be written for any event and any sensor. For $i$-th sensor and $n$-th event they read
+So far we have considered one sensor and one event. But \Eq{al measurement,al hit v} can be written for any event and any sensor, for $i$-th sensor and $n$-th event they read
 \eqref{
-m_i^n = (\vec d_i + \De\rh_i\,\vec d_{\perp i})^\T \left[\vec a^n (z_i + \De z_i) + \vec b^n - (\vec c_i + \De\vec c_i)\right] + \De m_i^n\ ,
+m_i^n = (\vec d_i + \De\rh_i\,\vec d_{\perp i})^\T \left[\vec a^n (z_i + \De z_i) + \vec b^n - (\vec c_i + \De\vec c_i)\right] + \De m_i^n + \O{10^{-7}\un{m}}\ ,
 }{al meas i n}
 where for brevity reasons we have made a replacement
 $$c_{z,i} \longrightarrow z_i\ ,\qquad \De c_{z,i} \longrightarrow \De z_i\ .$$
 
-\vskip 1cm
-\hrule
-\vskip 1cm
-
-where the last term includes the errors introduced by various approximations and by neglecting the ``rounding'' step. It will be treated as an error in what follows. One can rearrange the terms in the last equation
+In what follows, we will drop the last two terms on the \rhs, they will be treate as an error, see \Sc{al err}. The first term can be expanded
 \eqref{\eqnarray{
 \mu_i^n \equiv m_i^n - \vec d^\T \vec c = & &\cr
 & +\vec d_i^\T (\vec a^n z_i + \vec b^n)&\qquad 10^{-2}\un{m}\cr
 & -\vec d_i^\T \De\vec c_i&\qquad 10^{-5}\un{m}\cr
 & +\vec d_i^\T \vec a^n \De z_i&\qquad 10^{-??}\un{m} \cr
 & +\De \rh_i\ \vec d_{\perp i}^\T (\vec a^n z_i + \vec b^n - \vec c_i) &\qquad 10^{-5}\un{m} \cr
-& +\De \rh_i\ \vec d_{\perp i}^\T (\vec a^n \De z_i - \De\vec c_i) &\qquad 10^{-8}\un{m} \cr
-}}{effective measurement}
-The order estimates on the \rhs{} follow from \Tb{expected misalignments} and \Eq{z i order estimates}. It is clear that the last term can be neglected with respect to the others and hence we will do so. It is very advantageous since this is the only term non-linear in misalignments. 
-
-The first term on the \rhs{} of \Eq{effective measurement} accounts for the measurement of a track by a perfectly aligned detector, the other terms then constitute alignment corrections. Since these corrections are linear in misalignments, one can write
+& +\De \rh_i\ \vec d_{\perp i}^\T (\vec a^n \De z_i - \De\vec c_i) &\qquad 10^{-8}\un{m}\ , \cr
+}}{al effective measurement}
+where we have introduced an \em{effective measurement}. It differs from the full one just by constant $\vec d^\T \vec c$ (projection of sensor's center to its read-out direction). From the order estimates (shown above on the right-hand side) it is clear that one may neglect the last term. This is an important result since the remaining terms are (at most) linear in the misalignment parameters $\De \vec c_i$, $\De z_i$ and $\De \rh_i$. Furthermore, one can split the contributions of a track measurement by a sensor at the nominal position and the effect of misalignments:
 \eqref{\mu_i^n =
 \underbrace{\vec d_i^\T (\vec a^n z_i + \vec b^n)}_{\hbox{track}}
 +
-\underbrace{\sum_j \ga_{j, i}^n \ch_{j, i}}_{\hbox{alignment corrections}}
-\ ,}{effective measurement 2}
-introducing symbol $\ch_{j, i}$ for any misalignment. The mapping between the index $j$ and misalignment type can be found in \Tb{alignment quantities}. It will become useful to define shift in read-out direction as
-\eqref{\De s_i \equiv \vec d_i \cdot \De c_i\ .}{al shr def}
+\underbrace{\sum_j \ga_{j, i}^n\ \ch_{j, i}}_{\hbox{misalignment corrections}}
+\ .}{al effective measurement 2}
+In the above relation we have unified the notation for all misalignment quantities $\ch_j$, which influence the measurement via their coefficients $\ga_j$, see the summary in \Tb{al alignment quantities}
 
-\htab{alignment quantities}{Alignment quantities and their coefficients.}{\bln
+\htab{al alignment quantities}{Alignment quantities and their coefficients.}{\bln
 j & \hbox{quantity} & \ch_{j, i}					& \ga_{j, i}^n\cr\bln
 1 & \hbox{shift in read-out direction} & \De s_i 	& -1\cr\ln
 2 & \hbox{shift in }z & \De z_i						& \vec d_i^\T \vec a^n  \cr\ln
 3 & \hbox{rotation around}z & \De\rh_i				& \vec d_{\perp i}^\T (\vec a^n z_i + \vec b^n - \vec c_i)\cr\bln
 }
 
-\Eq{effective measurement 2} can be written for all events in a compact form using matrix formalism. Let's put all measurements to a vector
-\eqref{\vec M = (\mu^1_1 \ldots, \mu^2_1, \ldots)^\T\ .}{vector M}
-The vector of parameters $\vec P$ has two parts, first the track parameters for all events, second the alignment parameters for all detectors
-\eqref{\vec P = (a_x^1, a_y^1, b_x^1, b_y^1, a_x^2, \ldots || \ch_{1, 1}\ldots \ch_{1, D}, \ch_{2, 1}\dots \ch_{2, D}, \ldots)^\T}{vector P}
-Then, \Eq{effective measurement 2} reads
-\eqref{\vec M = \mat A \vec P\ ,}{effective measurement all}
-where
-\eqref{\mat A = \pmatrix{
-\al^1 & 		&		&\vrule	&\Ga_1^1	&\cdots	&\Ga_G^1	\cr
-	& \al^2	&		&\vrule	&\vdots		&		&\vdots		\cr
-	&		& \ddots&\vrule	&\Ga_1^N	&\cdots	&\Ga_G^N	\cr
-}}{mat A}
-and
-\eqref{\mat \al^n = \pmatrix{
-\vdots & \vdots & \vdots & \vdots \cr
-d_{ix} z_i & d_{iy} z_i & d_{ix} & d_{iy} \cr
-\vdots & \vdots & \vdots & \vdots \cr
-}, \quad \hbox{for all detectors involved in }n\hbox{-th event}}{mat alpha}
-and
-\eqref{\Ga_i^n = {\rm diag}\,\left(\ga_{i, 1}^n, \ldots, \ga_{i, D}^n \right)\ .}{mat Gamma}
-\TODO{Gamma is of dimension Dn x D !!!}
-
-\TODO{$N$ events, $D$ detectors, $D_n$ detectors active in $n$-th event, $G$ misalignment classes, $\vec\mu^n = (\mu^n_1, \ldots, \mu_{D_n}^n)^\T$}
-
-\eqref{\vec\mu^n =
-\underbrace{\mat\al^n \vec\ta}_{\hbox{track}}
-+
-\underbrace{\sum_j \mat\Ga_j^n \vec \ch_j}_{\hbox{misalignments}}
-\ ,}{todo1}
-
-\eqref{\vec P = (\vec\ta^1, \vec\ta^2, \ldots || \vec\ch_1, \vec\ch_2, \ldots)^\T}{todo2}
-
+From \Eq{al effective measurement} it is clear that the measurement is only sensitive to one component of the detector shift, in particular the \em{shift in the read-out direction}:
+\eqref{\De s_i \equiv \vec d_i \cdot \De c_i\ .}{al shr def}
+Thus, this is the only shift component that can be determined by the track-based alignment on a sensor level. For a RP package both transverse shift components can be determined, see \Sc{al rp fac}.
 
 
 \subsection[al sim fit]{Simultaneous fit of track and alignment parameters}
 
-This idea was first implemented in Millepede (see \bref{millepede}). Here we use different notation as this work as been done independently.
+From \Eq{al effective measurement 2} we see that sensors' measurements depend on the track parameters $\vec a$ and $\vec b$ and misalignment parameters $\ch$. One might thus fit sensors' data from a sample of events with the parameterization \Eq{al effective measurement 2}. This would result in misalignment parameter estimates and, as a byproduct, estimates of the track parameters.
 
-Now we would like to estimate parameters $\vec P$ based on the measurements $\vec M$. For that, we will use the Least Squares method (see e.g. Sec.~6.6 in \bref{barlow}), which gives the following prescription:
-\eqref{\hat\vec P = (\mat A^\T \mat V^{-1} \mat A)^{-1} \mat A^\T \mat V^{-1}\,\vec M\.}{P estimate exact}
-(The hat in $\hat\vec P$ is to emphasize it is an estimate.) The $\mat V$ matrix, is the correlation matrix for the measurements $\vec M$.
+This idea was first implemented in Millepede (see \bref{millepede}). Here we use different notation as our work as been done independently.
 
-The $\mat\Ga$ matrices (contained in $\mat A$ matrix) include track parameters which are unknown at the fit time. Instead, one can use track parameter estimates obtained via the model where all misalignments are neglected. This is basically using $\mat \al^n$ as fit matrix for data $\vec \mu^n$. Let's denote gamma and A matrices obtained in this way as $\tilde\mat\Ga$ and $\tilde\mat A$:
-\eqref{\vec\ta \rightarrow \hat\vec\ta: \quad \mat\Ga \rightarrow \tilde\mat\Ga, \mat A \rightarrow \tilde\mat A}{tau linearization}
- One can then use
-\eqref{\hat\vec P = (\tilde\mat A^\T \mat V^{-1} \tilde\mat A)^{-1} \tilde\mat A^\T \mat V^{-1}\,\vec M\ .}{P estimate}
+In order to perform the fit, it is useful to switch into a matrix formalism. Let us put all effective measurements in $n$-th event into vector $\vec\mu^n$. Then \Eq{al effective measurement 2} can be recast into:
+\eqref{\vec\mu^n =
+	\underbrace{\mat\al^n \vec\ta^n}_{\hbox{track}}
+	+
+	\underbrace{\sum_j \mat\Ga_j^n \vec \ch_j}_{\hbox{misalignments}}
+\ ,}{al vec mu}
+where $\vec\ta^n = (a_x^n, a_y^n, b_x^n, b_y^n)^\T$ is the vector of the track parameters and 
 
-The \rhs expression will be evaluated now bit by bit, keeping in mind one is mainly interested in the $\ch$ parameters (i.e. the bottom part of $\hat\vec P$ vector).
-\eqref{\mat A^\T \mat V^{-1}\mat A = \pmatrix{
-{\mat\al^1}^\T \mat V^{1^{-1}}\mat\al^1	&		&						&\vrule	&{\mat\al^1}^\T \mat V^{1^{-1}} \mat\Ga_1^1	&\cdots	&{\mat\al^1}^\T \mat V^{1^{-1}} \mat\Ga_G^1	\cr
-					&\ddots	&						&\vrule	&\vdots					&		&\vdots					\cr
-					&		&{\mat\al^N}^\T \mat V^{N^{-1}}\mat\al^N		&\vrule	&{\mat\al^N}^\T \mat V^{N^{-1}}\mat\Ga_1^N	&\cdots	&{\mat\al^N}^\T \mat V^{N^{-1}} \mat\Ga_G^N	\cr
+
+\eqref{\mat \al^n = \pmatrix{
+\vdots & \vdots & \vdots & \vdots \cr
+d_{ix} z_i & d_{iy} z_i & d_{ix} & d_{iy} \cr
+\vdots & \vdots & \vdots & \vdots \cr
+}, \quad i\hbox{ goes through all sensors involved in }n\hbox{-th event.}}{al mat alpha}
+The vector $\vec\ch_j$ groups all the misalignments of the $j$-th type for all sensors. The matrices $\mat\Ga_j^n$ contain the coefficients $\ga^n_{j,i}$ as introduced in \Eq{al effective measurement 2}.
+
+Let us remark that starting with \Eq{al vec mu}, the superscripts are reserved for event numbers, while subscripts fro the misalignment quantity class (see \Tb{al alignment quantities}).
+
+\TODO{NEEDED? $N$ events, $D$ detectors, $D_n$ detectors active in $n$-th event, $G$ misalignment classes, $\vec\mu^n = (\mu^n_1, \ldots, \mu_{D_n}^n)^\T$}
+
+Now we may put the measurement from all events into one vector:
+\eqref{\vec M = (\vec\mu^1, \vec\mu^2, \ldots)^\T}{al vec M}
+and similarly for the track and misalignment parameters
+\eqref{\vec P = (\vec\ta^1, \vec\ta^2, \ldots || \vec\ch_1, \vec\ch_2, \ldots)^\T\ .}{al vec P}
+With this notation, relations of the type \Eq{al vec mu} can be written
+\eqref{\vec M = \mat A \vec P\ ,\qquad
+	\mat A = \pmatrix{
+	\ddots & 		&		&\vrule	&\ddots	&				&\udots	\cr
+		&\mat \al^n	&		&\vrule	&		& \mat\Ga_g^n	&	\cr
+		&		& \ddots	&\vrule	&\udots	&				&\ddots	\cr
+	}\ .
+}{al effective measurement all}
+
+This form is convenient for the application of the linear Least Squares method (see e.g. Sec.~6.6 in \bref{barlow}). It gives the following prescription for the estimate of the parameter vector $\vec P$:
+\eqref{\hat\vec P = (\mat A^\T \mat V^{-1} \mat A)^{-1} \mat A^\T \mat V^{-1}\,\vec M\.}{al P estimate exact}
+We use the hat in $\hat\vec P$ is to emphasize it is an estimate. The $\mat V$ matrix, is the correlation matrix for the measurements $\vec M$.
+
+\TODO{V n}
+
+Unfortunately, \Eq{al P estimate exact} can not be applied directly. The problem comes from the fact that the $\ga^n_{j,i}$ coefficients (see \Tb{al alignment quantities}), which are contained in $\mat\Ga_j^n$ and $\mat A$ matrices, depend on the track parameters. And these are unknown at the fit time. Instead, one may adopt an \em{iterative} approach and use track parameter estimates obtained via a model where all misalignments are neglected. This is basically using $\mat \al^n$ as fit matrix for $\vec \mu^n$ data. Let us denote $\mat\Ga$ and $\mat A$ matrices obtained in this way with tildas:
+\eqref{\vec\ta \rightarrow \hat\vec\ta: \quad \mat\Ga \rightarrow \tilde\mat\Ga, \mat A \rightarrow \tilde\mat A\ .}{al tau linearization}
+This step brings in a necessity for several iterations, we will discuss them in \Sc{al err}.
+
+Now we would like to extract the vector of misalignment estimates $\hat\vec\ch = (\hat\vec\ch_1, \hat\vec\ch_2, \ldots)^\T$ from the full parameter vector $\hat\vec P$ (see \Eq{al vec P}). It can be done by a straightforward evaluation of the \rhs{} of \Eq{al P estimate exact}. The inverse of
+\eqref{\tilde\mat A^\T \mat V^{-1}\tilde\mat A =
+\pmatrix{
+\ddots 	& 											& 		&\vrule &\ddots & 														& \udots\cr
+	 	& {\mat\al^n}^\T \mat V^{n^{-1}} \mat\al^n	& 		&\vrule & 		& {\mat\al^n}^\T \mat V^{n^{-1}}{\tilde\mat\Ga}_j^n 			& 		\cr
+ 		& 											&\ddots &\vrule &\udots & 														& \ddots\cr
 \noalign{\hrule}
-{\mat\Ga_1^1}^\T \mat V^{1^{-1}} \mat\al	&\cdots	&{\mat\Ga_1^N}^\T \mat V^{1^{-1}} \mat\al	&\vrule	&\sum_n {\Ga_1^n}^\T \mat V^{1^{-1}} \Ga_1^n	&\cdots	&\sum_n {\Ga_1^n}^\T \mat V^{1^{-1}} \Ga_G^n	\cr
-\vdots				&		&\vdots					&\vrule	&\vdots					&		&\vdots					\cr
-{\mat\Ga_G^1}^\T \mat V^{N^{-1}}\mat\al	&\cdots	&{\mat\Ga_G^N}^\T \mat V^{N^{-1}} \mat\al	&\vrule	&\sum_n {\Ga_G^n}^\T \mat V^{N^{-1}} \Ga_1^n	&\cdots	&\sum_n {\Ga_G^n}^\T \mat V^{N^{-1}}\Ga_G^n	\cr
-}\ .}{mat ATA}
-This matrix can be inverted (\TODO{provided ...}) with the use of the following identity for block matrices (taken from \bref{wikipedia} keyword \em{matrix inverse}): 
-\eqref{\pmatrix{
-\mat A	&\strut\vrule	&\mat B	\cr
-\noalign{\hrule}
-\mat C	&\strut\vrule	&\mat D\cr
-}^{-1} = \pmatrix{
-\ldots							&\strut\vrule	&\ldots\cr
-\noalign{\hrule}
--\mat S^{-1}\mat C\mat A^{-1}	&\strut\vrule	& \mat S^{-1}\cr
-},\qquad \mat S = \mat D - \mat C\mat A^{-1}\mat B\ .}{BlockInverse}
-(The upper row was skipped as it will not be needed to estimate $\ch$ parameters.) After some algebra manipulations, matrix $\mat S$ can be written
-\eqref{\tilde\mat S = \pmatrix{
-\sum_n {\tilde\mat\Ga}_1^{n^\T} \mat\si^n {\tilde\mat\Ga}_1^n	&\cdots	&\sum_n {\tilde\mat\Ga}_1^{n^\T} \mat\si^n {\tilde\mat\Ga}_G^n	\cr
-\vdots								&		&\vdots									\cr
-\sum_n {\tilde\mat\Ga}_G^{n^\T} \mat\si^n {\tilde\mat\Ga}_1^n	&\cdots	&\sum_n {\tilde\mat\Ga}_G^{n^\T} \mat\si^n {\tilde\mat\Ga}_G^n	\cr
-}\ ,}{mat S}
-where we used
-\eqref{\mat\si^n = \mat V^{n^{-1}} - \mat V^{n^{-1}} \mat\al^n({\mat\al^n}^\T \mat V^{n^{-1}} \mat\al^n)^{-1} \mat {\mat\al^n}^\T V^{n^{-1}}\ .}{sigma n}
-
-The second bit needed for \Eq{P estimate} is
-\eqref{\mat A^\T \mat V^{-1}\,\vec M = \pmatrix{
-{\mat\al^1}^\T \mat V^{1^{-1}} \,\vec \mu^1\cr
-\vdots\cr
-{\mat\al^n}^\T \mat V^{N^{-1}} \,\vec \mu^N\strut\cr
-\ln
-\sum_n\mat{\Ga_1^n}^\T \mat V^{n^{-1}} \, \vec \mu^n\vrule width0pt height15pt\cr
-\vdots\cr
-\sum_n\mat{\Ga_G^n}^\T \mat V^{n^{-1}} \, \vec \mu^n\cr
-}\ .}{vec ATm}
-Finally, the $\ch$ parameters (the bottom part of $\hat\vec P$ vector) can be determined from
-\eqref{\hat\vec\ch = \mat S^{-1}\,\pmatrix{
-\sum_n {\mat\Ga_1^n}^\T\mat\,\mat\si^n\,\vec \mu^n\cr
-\vdots\cr
-\sum_n {\mat\Ga_G^n}^\T\mat\,\mat\si^n\,\vec \mu^n\cr
-}\ .}{chi estimate}
-
-In fact, the elements of $\mat\si^n\,\vec \mu^n$ vector are residuals for the $n$-track divided by the corresponding measurement uncertainty. We will call this ratio \em{normalized} residuals and denote $\vec r^n$. The full residuals will be denoted by $\vec R^n$:
-
-\eqref{\mat\si^n\,\vec \mu^n \equiv \vec r^n = \mat V^{n^{-1}} \vec R^n\ .}{vec R}
-
-It is worth mentioning some properties of the $\mat\si^n$ matrix. It is symmetric
-\eqref{\mat\si^{n^\T} = \mat\si^n\ ,}{sigma n symmetric}
-it is idempotent
-\eqref{\mat\si^n \mat\si^n = \mat\si^n}{sigma n idempotent}
-and it is singular
-\eqref{\mat\si^{n^\T} \mat\al^n = 0\ .}{sigma n singular}
-
-Since $\mat\si^n$ is singular (and so $\mat S$ might be \TODO{...}), one had better write
-\eqref{\tilde \mat S\, \hat\vec\ch = \tilde \vec T, \qquad 
-\tilde\vec T = \pmatrix{
-\sum_n {\tilde\mat\Ga}_1^{n^\T} \,\vec r^n\cr
-\vdots\cr
-\sum_n {\tilde\mat\Ga}_G^{n^\T} \,\vec r^n\cr
-}\ .}{fit equation}
-
-\TODO{Overview of the approximations:
-\> linearization of rotation matrix (and cosine correction)
-\> linearization of gamma coefficients (external fitter)
+\ddots 	& 											&\udots	&\vrule &\ddots & 														& \udots\cr
+	 	& {\tilde\mat\Ga_i}^{n^\T} \mat V^{n^{-1}} \mat\al^n& 		&\vrule & 		& \sum_n {\tilde\mat\Ga_i}^{n^\T} \mat V^{n^{-1}} {\tilde\mat\Ga}_j^n 	& \cr
+\udots	& 											&\ddots &\vrule &\udots & 														& \ddots\cr
 }
+\ .}{al mat ATA}
+can be obtained (let us assume momentarily that the inverse exists) with the aid of the following block matrix inverse rule (taken from \bref{wikipedia} keyword \em{matrix inverse}):
+\eqref{\pmatrix{
+	\cal A	&\strut\vrule	&\cal B	\cr
+	\noalign{\hrule}
+	\cal C	&\strut\vrule	&\cal D\cr
+	}^{-1} = \pmatrix{
+	\ldots							&\strut\vrule	&\ldots\cr
+	\noalign{\hrule}
+	-\mat S^{-1}{\cal C}{\cal A}^{-1}	&\strut\vrule	& \mat S^{-1}\cr
+},\qquad \mat S = {\cal D} - {\cal C}{\cal A}^{-1}{\cal B}\ .}{al block inverse}
+The matrix $\tilde\mat S$ can be written
+\eqref{\tilde\mat S = \pmatrix{
+	\ddots	& 																		& \udots\cr
+			& \sum_n {\tilde\mat\Ga_i}^{n^\T} \mat\si^n {\tilde\mat\Ga}_j^n 	& \cr
+	\udots	& 																		& \ddots\cr
+}\ ,}{al mat S}
+where we used
+\eqref{\mat\si^n = \mat V^{n^{-1}} - \mat V^{n^{-1}} \mat\al^n({\mat\al^n}^\T \mat V^{n^{-1}} \mat\al^n)^{-1} \mat {\mat\al^n}^\T V^{n^{-1}}\ .}{al sigma n}
+The second bit needed for \Eq{al P estimate exact} is
+\eqref{\tilde\mat A^\T \mat V^{-1}\,\vec M = \pmatrix{
+	\vdots\cr
+	{\mat\al^n}^\T \mat V^{n^{-1}} \,\vec \mu^n\cr
+	\vdots\cr
+	\ln
+	\vdots\cr
+	\sum_n{\tilde\mat\Ga_j}^{n^\T} \mat V^{n^{-1}} \, \vec \mu^n\cr
+	\vdots\cr
+}\ .}{al vec ATm}
+Putting all together yields
+\eqref{\tilde\mat S \hat\vec\ch \equiv
+\tilde\mat S \pmatrix{
+	\vdots\cr
+	\hat\vec\ch_j\cr
+	\vdots\cr
+}
+=\tilde\vec T\ ,\qquad
+\tilde\vec T = \pmatrix{
+	\vdots\cr
+	\sum_n {\tilde\mat\Ga_j}^{n^\T} \mat\,\mat\si^n\,\vec \mu^n\cr
+	\vdots\cr
+}
+\ .}{al fit equation}
 
+In fact, the elements of $\mat\si^n\,\vec \mu^n$ vector are residuals for the $n$-track divided by the corresponding measurement uncertainty. We will call this ratio \em{normalized residuals} and denote $\vec r^n$. The \em{full residuals} will be denoted by $\vec R^n$:
 
-\caption{Justification of the alignment equation}
+\eqref{\mat\si^n\,\vec \mu^n \equiv \vec r^n = \mat V^{n^{-1}} \vec R^n\ .}{al vec R}
 
-As we will show in the following, the $\mat S$ matrix is singular and therefore the identity \Eq{BlockInverse} cannot be used. Thus, it is important to justify the validity of the final result \Eq{fit equation}. By plugging \Eq{vec R,todo1} to the definition of $\tilde\vec T$ in \Eq{fit equation} one obtains
+It is worth mentioning some properties of the $\mat\si^n$ matrix -- it is symmetric, idempotent and singular:
+\eqref{
+	\mat\si^{n^\T} = \mat\si^n\ ,\qquad
+	\mat\si^n \mat\si^n = \mat\si^n\ ,\qquad
+	\mat\si^{n^\T} \mat\al^n = 0\ .
+}{al prop sigma n}
+
+Above we have assumed that the $\mat S$ matrix is regular (and thus the matrix inversion in \Eq{al P estimate exact} can be performed). However, in \Sc{al sing modes} we will demonstrate the opposite -- this just reflects the fact that certain misalignment are inaccessible to the track-based alignment. Despite the deficiency, the result \Eq{al fit equation} is almost correct. An easy way to see it is to plug \Eq{al vec mu} to the definition of $\tilde\vec T$ in \Eq{al fit equation}, it yields
 \eqref{\tilde\vec T =
 \pmatrix{
-\vdots \cr
-\sum_n {\tilde\mat\Ga}_j^{n^\T} \mat\si^n \vec\mu^n\cr
-\vdots \cr
+	\vdots \cr
+	\sum_n {\tilde\mat\Ga}_j^{n^\T} \mat\si^n \vec\mu^n\cr
+	\vdots \cr
 }
 =
 \pmatrix{
-\ddots & & \udots \cr
- & \sum_n {\tilde\mat\Ga}_j^{n^\T} \mat\si^n \mat\Ga_i^n\cr
-\udots & & \ddots \cr
+	\ddots & & \udots \cr
+	 & \sum_n {\tilde\mat\Ga}_j^{n^\T} \mat\si^n \mat\Ga_i^n\cr
+	\udots & & \ddots \cr
 }
-\pmatrix{\vdots \cr {\vec\ch_{\rm a}}_i \cr \vdots}
+\vec\ch_i
 =
-\bar\mat S \vec\ch_{\rm a}
-}{exact fit equation}
-(the a subscript in $\vec\ch_{\rm a}$ is to emphasize the we mean the actual misalignments). This is close to \Eq{fit equation}, but not completely equivalent. The difference is that $\tilde\mat S$ contains both $\mat\Ga$ matrices with tildes. This difference represents the error we make by the linearization step \Eq{tau linearization}. Since the expected misalignments are small, the difference between $\mat\Ga$ and $\tilde\mat\Ga$ are small too and it is reasonable to expect that the solution of \Eq{fit equation} would be close to the actual misalignments $\vec\ch_a$. The error can be reduced by taking several iterations \TODO{...}. Note that this problem is not present if only shifts in the read-out direction are considered. The corresponding $\mat\Ga$ matrices are independent of track parameters and therefore there is no difference between tilded and non-tilded versions.
+\bar\mat S \vec\ch
+}{al exact fit equation}
+
+The only difference between $\tilde\mat S$ in \Eq{al fit equation} and $\bar\mat S$ in \Eq{al exact fit equation} is that $\tilde\mat S$ contains both $\mat\Ga$ matrices with tildes (see \Eq{al mat S}). This difference represents the error we make by the simplification step \Eq{al tau linearization}. Since the expected misalignments are small, the difference between $\mat\Ga$ and $\tilde\mat\Ga$ shall be small too and it is reasonable to expect that the solution $\hat\vec\ch$ of \Eq{al fit equation} would be close to the actual misalignments $\vec\ch$. The error can be reduced by taking several iterations, it will be discussed in \Sc{al err}.
+
+Note that this problem is not present if only shifts in the read-out direction are considered. The corresponding $\mat\Ga$ matrices are independent of track parameters (see \Tb{al alignment quantities}) and therefore there is no difference between the tilded and non-tilded versions.
 
 \subsection[al sing modes]{Singular and weak modes}
 
-It is clear that not all $\ch$ parameters can be determined by the track-based alignment. It is a consequence of the fact that measurements enter the fit equation \Eq{fit equation} in the form of residuals. That means that misalignment modes that can be compensated by track-parameters variation, cannot be revealed. These misalignment modes manifest themselves as eigenvectors of the $\mat S$ matrix with zero eigenvalue. This makes $\mat S$ singular and the naive, matrix-inversion solution \Eq{chi estimate} is not possible. For this reason we will refer to such misalignment modes as \em{singular modes}.
+It is clear that not all $\ch$ parameters can be determined by the track-based alignment. It is a consequence of the fact that measurements enter the fit equation \Eq{al fit equation} in the form of residuals. That means that the misalignment modes that can be compensated by track-parameters variation, cannot be revealed. These misalignment modes manifest themselves as eigenvectors of the $\mat S$ matrix with zero eigenvalue. This makes $\mat S$ singular and thus we will refer to such misalignment modes as \em{singular modes}.
 
-\TODO{Define weak mode.}
-
-\TODO{This is for the exact fit equation, for the real one, the singular modes are "almost" singular modes.}
+\TODO{Define weak mode. Numerical precision. Moreover, we work with $\tilde\mat S$ not just $\mat S$}. \TODO{This is for the exact fit equation, for the real one, the singular modes are "almost" singular modes.}
 
 Let's prove the statements above. Imagine that one could change misalignments $\vec\ch_j$ and track parameters $\vec\ta^n$ such that all measurments $\vec\mu^n$ in all events $n$ would remain unchanged. That is
 \eqref{\vec\ch_j \rightarrow \vec\ch_j',\quad \vec\ta^n \rightarrow {\vec\ta'}^n(\vec\ta^n, \vec\ch_j, \vec\ch_j') : \quad \vec\mu^n \rightarrow {\vec\mu'}^n = \vec\mu^n\ .}{track-parameter compensation}
-From \Eq{todo1} it follows
+From \Eq{al vec mu} it follows
 \eqref{\sum_j \mat\Ga_j^n (\vec\ch_j' - \vec\ch_j) = \mat \al^n (\vec\ta^n - {\vec\ta'}^n) }{aux1}
 and thus
 \eqref{
