al chapter advanced
git-svn-id: svn+ssh://svn.cern.ch/reps/totem/trunk/user/jkaspar/publications@4596 4525493e-7705-40b1-a816-d608a930855b

--- a/2010/thesis/totem.tex
+++ b/2010/thesis/totem.tex
@@ -2,7 +2,7 @@
 TOTEM, RP, T1, T2, IP, BPM, BLM
 \fi
 
-\chapter{The TOTEM experiment}
+\chapter[ttm]{The TOTEM experiment}
 
 MOTIVATION: The forward hadronic physics is one of the least explored and understood areas of the particle physics.
 
@@ -38,6 +38,18 @@ strip	& 0 to 127		\cr
 }
 
 \>> give idea about the dimensions (for reference reasons later), + spacing between sensors (total stack size), detector pitch, detector orientation
+
+0
+4.6
+9
+13.6
+18
+22.6
+27
+31.6
+36
+40.6
+
 
 \> define u, v (the system rotating with sensor) and U, V (45 deg. rotation of about s of the xys system), strips along u, read-out direction is v
 \TODO{make sure this is used everywhere}
